## Makefile.am -- Process this file with automake to produce Makefile.in

test_indexdir = $(tstsrcdir)/index
 
cl_test_SOURCES  += $(test_indexdir)/TestHighFreqTerms.cpp
cl_test_SOURCES  += $(test_indexdir)/TestIndexWriter.cpp
cl_test_SOURCES  += $(test_indexdir)/TestUtf8.cpp
cl_test_SOURCES  += $(test_indexdir)/TestReuters.cpp 
