## Makefile.am -- Process this file with automake to produce Makefile.in

test_searchdir = $(tstsrcdir)/search
 
cl_test_SOURCES  += $(test_searchdir)/TestDateFilter.cpp
cl_test_SOURCES  += $(test_searchdir)/TestForDuplicates.cpp
cl_test_SOURCES  += $(test_searchdir)/TestSearch.cpp
cl_test_SOURCES  += $(test_searchdir)/TestSort.cpp
cl_test_SOURCES  += $(test_searchdir)/TestTermVector.cpp
cl_test_SOURCES  += $(test_searchdir)/TestWildcard.cpp
