## Makefile.am -- Process this file with automake to produce Makefile.in
analyzersdir = $(lsrcdir)/analysis
analyzershdir = $(includedir)/CLucene/analysis
 
libclucene_la_SOURCES  += $(analyzersdir)/Analyzers.cpp
libclucene_la_SOURCES  += $(analyzersdir)/AnalysisHeader.cpp

analyzersh_HEADERS = $(analyzersdir)/*.h
