## Makefile.am -- Process this file with automake to produce Makefile.in
configdir = $(lsrcdir)/config
confighdir = $(includedir)/CLucene/config
 
libclucene_la_SOURCES  += $(configdir)/gunichartables.cpp 
libclucene_la_SOURCES  += $(configdir)/repl_lltot.cpp
libclucene_la_SOURCES  += $(configdir)/repl_tcscasecmp.cpp
libclucene_la_SOURCES  += $(configdir)/repl_tcslwr.cpp
libclucene_la_SOURCES  += $(configdir)/repl_tcstod.cpp
libclucene_la_SOURCES  += $(configdir)/repl_tcstoll.cpp
libclucene_la_SOURCES  += $(configdir)/repl_tprintf.cpp
libclucene_la_SOURCES  += $(configdir)/threads.cpp
libclucene_la_SOURCES  += $(configdir)/utf8.cpp

configh_HEADERS = $(configdir)/*.h
