## Makefile.am -- Process this file with automake to produce Makefile.in
debugdir = $(lsrcdir)/debug
debughdir = $(includedir)/CLucene/debug
 
libclucene_la_SOURCES  += $(debugdir)/condition.cpp 
libclucene_la_SOURCES  += $(debugdir)/error.cpp
libclucene_la_SOURCES  += $(debugdir)/memtracking.cpp

debugh_HEADERS = $(debugdir)/*.h
