## Makefile.am -- Process this file with automake to produce Makefile.in
documentdir = $(lsrcdir)/document
documenthdir = $(includedir)/CLucene/document
 
libclucene_la_SOURCES  += $(documentdir)/DateField.cpp
libclucene_la_SOURCES  += $(documentdir)/Document.cpp
libclucene_la_SOURCES  += $(documentdir)/Field.cpp
 	
documenth_HEADERS	=  $(documentdir)/*.h
