## Makefile.am -- Process this file with automake to produce Makefile.in
qpdir = $(lsrcdir)/queryParser
qphdir = $(includedir)/CLucene/queryParser
 
libclucene_la_SOURCES  += $(qpdir)/Lexer.cpp
libclucene_la_SOURCES  += $(qpdir)/QueryParser.cpp
libclucene_la_SOURCES  += $(qpdir)/QueryParserBase.cpp
libclucene_la_SOURCES  += $(qpdir)/QueryToken.cpp
libclucene_la_SOURCES  += $(qpdir)/TokenList.cpp
libclucene_la_SOURCES  += $(qpdir)/MultiFieldQueryParser.cpp
 
qph_HEADERS   = $(qpdir)/*.h
