## Makefile.am -- Process this file with automake to produce Makefile.in
searchdir = $(lsrcdir)/search
searchhdir = $(includedir)/CLucene/search
 
libclucene_la_SOURCES  += $(searchdir)/BooleanQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/BooleanScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/DateFilter.cpp
libclucene_la_SOURCES  += $(searchdir)/CachingWrapperFilter.cpp
libclucene_la_SOURCES  += $(searchdir)/ChainedFilter.cpp
libclucene_la_SOURCES  += $(searchdir)/ConjunctionScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/ExactPhraseScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/Explanation.cpp
libclucene_la_SOURCES  += $(searchdir)/FieldCache.cpp
libclucene_la_SOURCES  += $(searchdir)/FieldCacheImpl.cpp
libclucene_la_SOURCES  += $(searchdir)/FieldSortedHitQueue.cpp
libclucene_la_SOURCES  += $(searchdir)/FieldDocSortedHitQueue.cpp
libclucene_la_SOURCES  += $(searchdir)/FilteredTermEnum.cpp
libclucene_la_SOURCES  += $(searchdir)/FuzzyQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/Hits.cpp
libclucene_la_SOURCES  += $(searchdir)/HitQueue.cpp
libclucene_la_SOURCES  += $(searchdir)/IndexSearcher.cpp
libclucene_la_SOURCES  += $(searchdir)/MultiSearcher.cpp
libclucene_la_SOURCES  += $(searchdir)/MultiTermQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/PhrasePositions.cpp
libclucene_la_SOURCES  += $(searchdir)/PhraseQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/PhraseScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/PrefixQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/QueryFilter.cpp
libclucene_la_SOURCES  += $(searchdir)/RangeFilter.cpp
libclucene_la_SOURCES  += $(searchdir)/RangeQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/SearchHeader.cpp
libclucene_la_SOURCES  += $(searchdir)/Similarity.cpp
libclucene_la_SOURCES  += $(searchdir)/SloppyPhraseScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/Sort.cpp
libclucene_la_SOURCES  += $(searchdir)/TermQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/TermScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/WildcardQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/WildcardTermEnum.cpp

searchh_HEADERS	=  $(searchdir)/*.h
