## Makefile.am -- Process this file with automake to produce Makefile.in
storedir = $(lsrcdir)/store
storehdir = $(includedir)/CLucene/store
 
libclucene_la_SOURCES     += $(storedir)/FSDirectory.cpp
libclucene_la_SOURCES     += $(storedir)/IndexInput.cpp
libclucene_la_SOURCES     += $(storedir)/Lock.cpp
libclucene_la_SOURCES     += $(storedir)/IndexOutput.cpp
libclucene_la_SOURCES     += $(storedir)/MMapInput.cpp
libclucene_la_SOURCES     += $(storedir)/RAMDirectory.cpp
libclucene_la_SOURCES     += $(storedir)/TransactionalRAMDirectory.cpp
 
storeh_HEADERS		=  $(storedir)/*.h