## Makefile.am -- Process this file with automake to produce Makefile.in
stdandir = $(lsrcdir)/analysis/standard
stdanhdir = $(includedir)/CLucene/analysis/standard

libclucene_la_SOURCES  += $(stdandir)/StandardAnalyzer.cpp 
libclucene_la_SOURCES  += $(stdandir)/StandardFilter.cpp
libclucene_la_SOURCES  += $(stdandir)/StandardTokenizer.cpp

stdanh_HEADERS =  $(stdandir)/*.h
